--- a/locales/jp/translation.json
+++ b/locales/jp/translation.json
@@ -17,9 +17,9 @@
     "Asterisk": "",
     "My values": "生活と仕事についての反射",
     "Make it ok to be wrong": "間違っても大丈夫にしましょう",
-    "Make it ok to be wrong text": "間違っても大丈夫だと言う考え方があれば、いつまでも向上することができるようになると思います。最先端と言うことのために努力するからこそ、間違うことは避けられないものです。だから、エラーを隠す方がいいというチーム文化があれば、失敗から学ぶことができません。その結果、自分を制限するようになってしまうと思います。\n\n典型的な仕事で「私は間違った、私は知らない」と言うのは大変難しいです。これは残念だと思います。私は自分の知らないことやエラーを誠実に伝える仕事環境を標榜したいと思います。",
-    "Be the one to change": "Be the one to change",
-    "Be the one to change text": "It is really hard to be vulnerable. It’s hard to step outside your world, and your safety, and all the ways of thinking you’ve inherited, from your community and your culture. But for me, the feeling of connecting with someone who is different from you is one of the most amazing things in the world. And it is worth it to be the person who steps out of what is familiar, without waiting for the other person to.\n\nOne of my favorite memories is sitting in the small home of a kind octogenarian in Oqaatsut, Greenland. It was just the two of us, and neither of us spoke each other’s language, but we shared beautiful moments of wordless understanding as she showed me how to thread beads on a traditional Greenlandic necklace.\n\nYou learn so much, and the rewards are immense, when you are the one to change and go towards the other.",
+    "Make it ok to be wrong text": "間違っても大丈夫だと言う考え方があれば、いつまでも向上することができるようになると思います。最先端と言うことのために努力するからこそ、間違うことは避けられないものです。エラーを隠す方がいいというチーム文化があれば、失敗から学ぶことができません。その結果、自分を制限するようになってしまうと思います。\n\n典型的な仕事で「私は間違った、私は知らない」と言うのは大変難しいです。これは残念だと思います。私は自分の知らないことやエラーを誠実に伝える仕事環境を標榜したいと思います。",
+    "Be the one to change": "変化する責任は自分の",
+    "Be the one to change text": "弱点を見て、自分のことを変更するのはとても難しいです。詳しくない視点に直面すると、不安とか危険までも感じるかもしれません。しかし、他の文化から来る人と接続するのは素晴らしい感じだと思います。そうできるために、他の人が変化するのを待たずに、自分で変化するほうがいいでしょうと思います。\n\n私の一番いい思い出にはグリーンランドに行った時です。ホストしてくれたグリーンランド人のおばあちゃんと一緒に、伝統的な民族衣装を作るようになりました。おばあちゃんも私もお互いの言語が話せませんでした。それでも、接続するために言葉がいりませんでした。\n\n自分と違う人と色々なことを共有て、自分の視点を超えて見ると、きっと豊かな経験になると思います。",
     "Care about the people you work with": "Care about the people you work with",
     "Care about the people you work with text": "At work, there is caring, and then there is really caring - being willing to take a knock for a colleague, to genuinely seek to know where they’re coming from, and to invest in their success. Doing these things, in my experience, unlocks an incredible ability to work on hard problems together and come up with amazing solutions.\n\nI am a big fan of Kim Scott’s idea of Radical Candor. And I 100% buy her assessment that having great relationships with your colleagues means putting work into caring personally, and directly challenging each other. At the same time. Always. These two things reinforce each other and build trust.\n\nPeople can tell when you care about them just because it’s convenient, or expected. If you go out of your way for each other, and say the hard stuff to each other, the bonds you can build lead to good outcomes for everyone.",
     "People can change": "People can change",
@@ -34,11 +34,11 @@
         "View site": "サイトを見る",
         "View the code": "コードを見る",
         "RACI": {
-          "Title": "RACI Project Management",
+          "Title": "プロジェクト管理のアップ",
           "Tech stack front end": "React, Semantic UI React, JWT",
           "Tech stack back end": "Rails, BCrypt",
           "Project main text": "I built this app to help solve the problem of managing roles on a team.\n\n'RACI' stands for Responsible, Accountable, Consulted, Informed. From my experience, the RACI (or DACI) framework provides a helpful level of detail to make clear who is responsible for getting a job done well. It reduces the risk of low quality work arising from murky or pooled accountability, it helps make sure the right people have input on tasks (and conversely, gives team members explicit authority to make decisions without input!), and it prompts conversations about workload and capacity.\n\nOn past projects, I used Google Sheets to build my own RACI frameworks. This app has the advantage of being a standardized process which is simple to use, and of supporting functionality such as flags and alerts, issue-tracking and workflow tools.",
-          "Project short text": "A simple and standardized app for teams to designate who is Responsible, Accountable, Consulted and Informed on a given task. It helps reduce the risk of low quality work due to murky or pooled accountability, and prompts conversations about capacity, through the ability to flag tasks."
+          "Project short text": "このシンプルなUIのアップはチームが一人一人の役割を明確に定具するためのツールです。不透明な責任に関する問題を解決することを目指します。"
         },
         "Digital Innovation": {
           "Title": "Digital Innovation Statistics",
