--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -10,14 +10,14 @@
   "custom-message": {
     "Hi": "Bonjour",
     "there": "",
-    "Welcome to my site": "Bienvenue sur mon site.",
+    "Welcome to my site": "Bienvenue sur mon site. \n Je suis heureuse que tu sois là.",
     "It's lovely to have you here": "Je suis heureuse que tu sois là.",
-    "You can browse my projects below": "Tu peux parcourir tous mes projets \n ci-dessous.",
-    "And see my process to build them, including user stories and ERDs": "Et également y voir les approches \n de planification que j'ai employées \n (user stories, ERDs, etc).",
-    "I taught myself React-Three-Fiber (Three.js) to make this site": "J'ai appris React Three Fiber \n dans l'objectif de créer ce site.",
+    "You can browse my projects below": "Tu peux visualiser tous mes projets \n ci-dessous ainsi que \n mes méthodes de planification.",
+    "And see my process to build them, including user stories and ERDs": "Et également voir les approches \n de planification que j'ai employées \n (user stories, ERDs, etc).",
+    "I taught myself React-Three-Fiber (Three.js) to make this site": "J'ai appris React Three Fiber \n pour créer ce site.",
     "I'd love to chat more about how I built it": "Je serais ravie d'en discuter \n plus avec toi.",
     "Just let me know": "Fais-moi signe \n si cela t'intéresserait :)",
-    "Most of all, I hope you enjoy having a look around": "Avant tout, \n J'espère que tu passeras un \n bon moment ici.",
+    "Most of all, I hope you enjoy having a look around": "Avant tout, J'espère que tu passeras \n un bon moment ici. \n -Bridget x",
     "Bridget x": "Bien à toi, Bridget x"
   },
   "main": {
